@@ -534,9 +534,11 @@ class Repo_OSD_Lyrics(_repo):
     def __init__(self):
         self.desc = _('OSD Lyrics is inspired by lrcdis. With OSD Lyrics, you can enjoy an OSD lyrics show with various media players in Linux.')
         self.apt_content = 'osd-lyrics'
-        self.web_page = 'http://ppa.launchpad.net/osd-lyrics/ppa'
+        self.web_page = 'https://launchpad.net/~osd-lyrics/+archive/ppa'
         self.apt_file = '/etc/apt/sources.list.d/osl_lyrics.list'
         self.apt_conf = ['deb http://ppa.launchpad.net/osd-lyrics/ppa/ubuntu $version main']
+        self.key_url = 'http://keyserver.ubuntu.com:11371/pks/lookup?get&search=0xA1CE4D88AB90650AD1C2EB2C97F6E5D34865CF4F'
+        self.key_id = '4865CF4F'
         _repo.__init__(self)
 
 class Repo_Mplayer_VOD(_repo):
