@@ -3,6 +3,7 @@
     * Add a dialog with "Do not ask again" checkbutton to ask the user to 
       make sure to exit Ailurus.
     * Add a checkmenu "Ask when quit" to the Preferences.
+    * Add OSD Lyrics installation
 
 2010-04-11 MA Yue <velly.empire@gmail.com>
 
